# multidimensional-search-fyp

./: .gitignore  CMakeLists.txt  FYP.tex  LICENSE  README.md  appendixa.tex  appendixb.tex  appendixc.tex  background_research.tex  chapter1.tex  chapter2.tex  chapter3.tex  conclusion.tex  cover.tex  decisions.tex  design.tex  design_and_implementation.tex  evaluation.tex  introduction.tex  iteration_1.tex  methodology.tex  r_comparison.tex  r_definition.tex  refs.bib  run_tests.sh
data/: CMakeLists.txt
data/include/: ClusteredDatasetGenerator.h  DataTypes.h  DatasetFileLoader.h  HyperCubeRandomGenerator.h  Point.h  PointFactory.h  RandomPointGenerator.h  Region.h  SkewedDatasetGenerator.h  UniformDatasetGenerator.h  Util.h
data/src/: ClusteredDatasetGenerator.cpp  DatasetFileLoader.cpp  Dummy.cpp  EvaluationDataGenerator.cpp  HyperCubeRandomGenerator.cpp  Point.cpp  PointFactory.cpp  RandomPointGenerator.cpp  Region.cpp  SkewedDatasetGenerator.cpp  UniformDatasetGenerator.cpp  Util.cpp
data/tests/: TestDatasetFileLoader.h  TestDatasetGenerators.h  TestPointFactory.h  TestRunner.cpp  TestTypes.h
dependencies/: CMakeLists.txt
evaluator/: CMakeLists.txt
evaluator/include/: CommandLineArguments.h  Evaluator.h  IndexStructureFactory.h  SpecEvaluator.h  Specifications.h  TestOperation.h  TestOperationLoader.h  TestSuite.h  Timing.h
evaluator/src/: CommandLineArguments.cpp  Evaluator.cpp  EvaluatorMain.cpp  IndexStructureFactory.cpp  SpecEvaluator.cpp  TestOperation.cpp  TestOperationLoader.cpp  TestSuite.cpp  Timing.cpp
evaluator/tests/: TestCommandLineArguments.h  TestRunner.cpp  TestTestOperationLoader.h  TestTestSuite.h  TestTiming.h
evaluator/tests/test_files/: clear.ops  invalid_header.ops  invalid_syntax.ops  multiple.ops  not_enough.ops  single.ops  test.suite
figures/: fig1.eps
index_structures/: CMakeLists.txt
index_structures/include/: BDTree.h  BoundaryDistanceHashing.h  BucketKDTree.h  DuplicateHashTable.h  Hashing.h  IMinMax.h  IndexPseudoPyramidTree.h  IndexPyramidTree.h  IndexStructure.h  KDTree.h  Octree.h  ParallelSequentialScan.h  PseudoPyramidTree.h  PyramidTree.h  RecursivePyramidTree.h  SequentialScan.h  SplayPseudoPyramidTree.h  SplayPyramidTree.h  SplayQuadtree.h  SplayTree.h  UniqueHashTable.h
index_structures/src/: BDTree.cpp  BoundaryDistanceHashing.cpp  BucketKDTree.cpp  DuplicateHashTable.cpp  IMinMax.cpp  IndexPseudoPyramidTree.cpp  IndexPyramidTree.cpp  KDTree.cpp  Octree.cpp  ParallelSequentialScan.cpp  PseudoPyramidTree.cpp  PyramidTree.cpp  RecursivePyramidTree.cpp  SequentialScan.cpp  SplayPseudoPyramidTree.cpp  SplayPyramidTree.cpp  SplayQuadtree.cpp  SplayTree.cpp  UniqueHashTable.cpp
index_structures/tests/: Common.cpp  Common.h  TestBDTree.h  TestBoundaryDistanceHashing.h  TestBucketKDTree.h  TestDuplicateHashTable.h  TestIMinMax.h  TestIndexPseudoPyramidTree.h  TestIndexPyramidTree.h  TestKDTree.h  TestOctree.h  TestParallelSequentialScan.h  TestPseudoPyramidTree.h  TestPyramidTree.h  TestRecursivePyramidTree.h  TestRunner.cpp  TestSequentialScan.h  TestSplayPseudoPyramidTree.h  TestSplayPyramidTree.h  TestSplayQuadtree.h  TestSplayTree.h  TestUniqueHashTable.h
mdsearch/: CMakeLists.txt
mdsearch/include/: bithash.hpp  dataset.h  dataset.hpp  hashstruct.h  hashstruct.hpp  hashtable.h  hashtable.hpp  kdtree.h  kdtree.hpp  multigrid.h  multigrid.hpp  operationlist.hpp  pyramidtree.h  pyramidtree.hpp  timing.hpp  types.h  types.hpp
mdsearch/src/: test.cpp  test_structures.cpp  test_trace.cpp
midproject_report/: aim.tex  appendix.tex  background_research.tex  evaluation.tex  introduction.tex  methodology.tex  mid_project.tex  next.tex  objectives.tex  progress.tex  r_challenges.tex  r_comparison.tex  r_conclusion.tex  r_definition.tex  r_parallel.tex  r_structures.tex  refs.bib  requirements.tex  schedule.tex  structure_taxonomy.yuml  technology.tex
report/: FYP.tex  acknowledge.tex  appendixa.tex  appendixb.tex  appendixc.tex  appendixd.tex  appendixe.tex  appendixf.tex  appendixg.tex  appendixh.tex  appendixi.tex  appendixj.tex  background_research.tex  chosen_structures.tex  conclusion.tex  cover.tex  design_and_implementation.tex  evaluation.tex  evaluation_outline.tex  implementation_summary.tex  introduction.tex  iteration_0.tex  iteration_1.tex  iteration_2.tex  iteration_3.tex  methodology.tex  performance_evaluation.tex  project_evaluation.tex  r_challenges.tex  r_comparison.tex  r_conclusion.tex  r_definition.tex  r_parallel.tex  r_structures.tex  refs.bib  summary.tex  technical_evaluation.tex
report/figures/: md_structure_taxonomy.psd
results/end_of_iteration1/: all_delete_clustered.ps  all_delete_randuniform.ps  all_delete_skewed.ps  all_insert_clustered.ps  all_insert_randuniform.ps  all_insert_skewed.ps  all_pquery_clustered.ps  all_pquery_randuniform.ps  all_pquery_skewed.ps  octree_delete_clustered.times  octree_delete_randuniform.times  octree_delete_skewed.times  octree_insert_clustered.times  octree_insert_randuniform.times  octree_insert_skewed.times  octree_pquery_clustered.times  octree_pquery_randuniform.times  (+31 more)
scripts/: convert_dataset_to_binary.py  count_unique_points.py  example.suite  generate_all_op_lists.sh  generate_bar_charts.py  generate_dataset_operations.py  generate_example_histograms.py  generate_histogram_plot.py  generate_latex_tables.py  generate_random_dataset.py  generate_random_operations.py  generate_timing_plots.py  hurricane_to_dataset.py  it1_individual_test.sh  it1_plot_timings.sh  it1_plotscript.plg  it1_process_timing_results.sh  it1_run_rebuild_tests.sh  it1_run_tests.sh  it1_size_plotscript.plg  it2_plot_timings.sh  it2_plotscript.plg  it2_process_timing_results.sh  it2_run_bucketsize_tests.sh  it2_run_hashfunction_tests.sh  it2_run_tests.sh  iteration1.suite  iteration3.suite  kdtree_balancefactor.suite  maps.py  multiplot_timings.plg  plot_2d_datasets.py  plot_2d_points.py  plot_3d_points.py  plot_all_timings.sh  plot_timing.plg  process_all_timing_results.sh  process_size_results.py  process_timing_results.py  read_binary_dataset.py  (+10 more)
(+11 files in other folders)
